# expense-tracker-mcp

./: .env.example  .env.test  .flake8  .gitignore  README.md  categories.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp.py  setup.py
.github/workflows/: coverage.yml  lint.yml  security.yml  tests.yml
app/: config.py  database.py  main.py  mcp_server.py  mcp_tools.py
app/api/v1/: categories.py  tags.py  transactions.py
app/core/database/: connection.py
app/core/models/: auth_models.py  chat_models.py  models.py
app/core/repositories/: category_repository.py  tag_repository.py  transaction_repository.py
app/core/services/: categorization_service.py  category_service.py  embeddings_free.py  tag_service.py  transaction_service.py
app/crud/: categories.py  tags.py  transactions.py
app/mcp/: __init__.py  prompts.py  resources.py  tools.py
app/models/: models.py
app/schemas/: schemas.py
app/servers/gemini/: API_DOCUMENTATION.md  README.md  main.py
app/servers/gemini/auth/: __init__.py  jwt_auth.py
app/servers/gemini/integrations/: gemini_mcp_service.py  mcp_connection_manager.py
app/servers/gemini/routes/: __init__.py  auth.py  chat.py
app/servers/mcp/: prompts.py  resources.py  server.py  tags_config.py  tools.py
app/services/: categorization.py  categorization_free.py  embeddings.py  embeddings_free.py
app/shared/: config.py
docs/: README.md
scripts/: categories_data.py  create_embeddings_schema.sql  mcp_demo.py  populate_hierarchical_categories.py  populate_predefined_tags.py  show_categories.py  tail_logs.sh  update_find_similar_transactions.sql  upload_categories.py
tests/: conftest.py  test_categories.py  test_mcp_tools.py  test_tags.py  test_transactions.py
